--- a/index.pug
+++ b/index.pug
@@ -11,4 +11,8 @@ html(lang="en")
     include loyeers/main.pug
     include loyeers/job-openings.pug
     include loyeers/work.pug
+    include loyeers/users.pug
+    include loyeers/news.pug
+    include loyeers/explore.pug
+    include loyeers/footer.pug
 
