--- a/style/_variable.sass
+++ b/style/_variable.sass
@@ -1,10 +1,10 @@
 $colors-nero: #fff
 $colors-ebony: #030407
 $colors-nero-24: rgba(255, 255, 255, 0.24)
-$colors-royal-blue: #443fde
+$colors-royal-blue: rgb(68, 63, 222)
 $colors-shark: #24262d
 $colors-bombay: #b2b3bd
-$colors-athens-gray: #ebebef
+$colors-athens-gray2: #ebebef
 $colors-bright-gray: #3e404c
 $colors-black: #000
 $colors-manatee: #84889a
@@ -33,3 +33,8 @@ $colors-jungle-green: #2eb67d
 $colors-fuel-yellow: #ecb22e
 $colors-mischka: #d6d7e0
 $colors-blue-ribbon: #1552f0
+
+
+$btn-left: url("data:image/svg+xml,%3Csvg width='17' height='17' viewBox='0 0 17 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.63769 7.58858L10.0017 2.22455L8.58769 0.810547L0.809692 8.58858L8.58769 16.3666L10.17 14.9526L4.63769 9.58858H16.8097V7.58858H4.63769Z' fill='%23D6D7E0' /%3E%3C/svg%3E")
+
+$btn-right: url("data:image/svg+xml,%3Csvg width='17' height='17' viewBox='0 0 17 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.9817 7.58858L7.61769 2.22455L9.03169 0.810547L16.8097 8.58858L9.03169 16.3666L7.769 14.9526L12.9817 9.58858H0.809692V7.58858H12.9817Z' fill='%23030407' /%3E%3C/svg%3E")
