--- a/style/style.sass
+++ b/style/style.sass
@@ -11,6 +11,11 @@
   max-width: 1140px
   width: 100%
 
+.container2
+  margin: 0 auto
+  max-width: 960px
+  width: 100%
+
 .body
   display: flex
   flex-direction: column
@@ -120,6 +125,7 @@
     & svg:hover path
       transition: 0.3s
       fill: $colors-royal-blue
+
 .jo
   background-color: $colors-athens-gray
   padding: 64px 0
@@ -209,13 +215,13 @@
     &_slide-btn
       display: flex
       gap: 22px
-      & button
-        cursor: pointer
-        text-align: center
-        width: 48px
-        height: 48px
-        border: 1px solid $colors-athens-gray
-        background-color: $colors-nero
+  &__btn
+    &_left
+      background-image: $btn-left
+      @include slider-btn
+    &_right
+      background-image: $btn-right
+      @include slider-btn
   &__slider
     margin-top: 58px
     display: flex
@@ -249,3 +255,219 @@
         background-color: $colors-harp
         display: inline-block
         width: fit-content
+  &__person
+    margin-top: 128px
+    display: flex
+    align-items: center
+    gap: 104px
+    &_img
+      display: flex
+      flex-direction: column
+      align-items: center
+      & img
+        max-width: 518px
+      & p
+        background-image: url("data:image/svg+xml,%3Csvg width='366' height='50' viewBox='0 0 366 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M-0.000305176 0.837891H365.61L329.94 54.3418H35.669L-0.000305176 0.837891Z' fill='%23F8F8FA' /%3E%3C/svg%3E")
+        background-repeat: no-repeat
+        background-size: cover
+        text-align: center
+        width: 365px
+        padding: 15.5px
+        @include font-family(14px, 400, 120%, $colors-bright-gray, 0)
+    &_info
+      display: flex
+      flex-direction: column
+      gap: 32px
+      & h3
+        @include second-family(40px, 700, 120%, $colors-ebony, -0.02em)
+      & p
+        @include font-family(16px, 400, 180%, $colors-bright-gray, -0.02em)
+    &_list
+      display: flex
+      flex-direction: column
+      gap: 14px
+    &_item
+      display: flex
+      gap: 16px
+      background-color: $colors-athens-gray
+      padding: 16px
+      &-icon
+        padding: 16px
+        background-color: $colors-nero
+        border: 1px solid $colors-athens-gray2
+      &-desc
+        & p
+          @include font-family(16px, 500, 180%, $colors-ebony, -0.02em)
+        & small
+          @include font-family(14px, 400, 160%, $colors-shuttle-gray, -0.02em)
+
+.users
+  background-color: $colors-athens-gray
+  padding-bottom: 64px
+  & h3
+    @include second-family(40px, 700, 120%, $colors-ebony, -0.02em)
+    text-align: center
+    margin-top: 64px
+  &__slider
+    display: flex
+    gap: 126px
+    margin-top: 72px
+    &_img
+      padding-bottom: 10px
+  &__info
+    display: flex
+    max-width: 450px
+    flex-direction: column
+    justify-content: space-between
+    &_desc
+      display: flex
+      flex-direction: column
+      gap: 23px
+      & h5
+        @include font-family(24px, 500, 140%, $colors-bright-gray, -0.02em)
+      & p
+        @include font-family(16px, 400, 180%, $colors-royal-blue, -0.02em)
+  &__btn
+    &_left
+      @include slider-btn
+      background-image: $btn-left
+    &_right
+      @include slider-btn
+      background-image: $btn-right
+
+.news
+  &__title
+    display: flex
+    justify-content: space-between
+    margin: 64px 0 56px
+    & h3
+      @include second-family(40px, 700, 120%, $colors-ebony, -0.02em)
+    &_btn
+      display: flex
+      gap: 12px
+  &__btn
+    &_left
+      @include slider-btn
+      background-image: $btn-left
+    &_right
+      @include slider-btn
+      background-image: $btn-right
+  &__slider
+    display: flex
+    gap: 24px
+    justify-content: center
+    &_item
+      border: 1px solid $colors-athens-gray2
+      display: flex
+      flex-direction: column
+      gap: 32px
+      padding: 9px
+      align-items: center
+      max-width: 390px
+      & button
+        display: flex
+        justify-content: center
+        gap: 8px
+        align-items: center
+        padding: 10px
+        border: none
+        background-color: $colors-athens-gray
+        width: 324px
+      &-img
+        max-width: 372px
+      &-info
+        display: flex
+        flex-direction: column
+        gap: 16px
+        padding: 0 24px
+        & small
+          padding: 6px 12px
+          background-color: $colors-link-water
+          width: fit-content
+          @include font-family(14px, 400, 120%, $colors-royal-blue, 0)
+        & h5
+          @include second-family(20px, 700, 140%, $colors-ebony, -0.02em)
+        & p
+          @include font-family(14px, 600, 171%, $colors-shuttle-gray, 0.07em)
+          position: relative
+          margin-left: 12px
+          &::before
+            content: ''
+            width: 4px
+            height: 4px
+            border-radius: 4px
+            background-color: $colors-shuttle-gray
+            position: absolute
+            top: 40%
+            left: -12px
+
+.explore
+  margin-top: 128px
+  background-color: $colors-athens-gray
+  padding: 80px 0 85px
+  position: relative
+  &__info
+    max-width: 490px
+    text-align: center
+    margin: 0 auto
+    display: flex
+    flex-direction: column
+    gap: 16px
+    & h4
+      @include second-family(32px, 700, 140%, $colors-ebony, -0.02em)
+    & p
+      @include font-family(16px, 400, 180%, $colors-bright-gray, -0.02em)
+    &_logo
+      position: absolute
+      top: 0
+      left: 50%
+      transform: translate(-50%, -50%)
+      border: 1px solid $colors-athens-gray2
+      background-color: $colors-nero
+      max-width: 1072px
+      width: 100%
+      padding: 16px 0
+  &__search
+    &_icon
+      position: absolute
+      bottom: 0px
+      left: 50%
+      transform: translate(-50%, 50%)
+      display: flex
+      align-items: center
+      justify-content: space-between
+      background-color: $colors-nero
+      outline: 1px solid $colors-athens-gray2
+      transition: 0.3s
+      width: 720px
+      padding: 13px
+      &:hover, &:focus-within
+        outline: 1px solid $colors-royal-blue
+        fill: $colors-royal-blue
+      &:hover svg, &:focus-within svg
+        transition: 0.3s
+        fill: $colors-royal-blue
+    &_svg
+      position: absolute
+      left: 15px
+      fill: #84889A
+    &_building
+      position: relative
+      top: -35px
+      z-index: -1
+      object-fit: cover
+  &__input_search
+    border: none
+    outline: none
+    background-color: $colors-nero
+    padding-left: 37px
+    width: 100%
+    &::placeholder
+      @include font-family (14px, 400, 100%, $colors-dusty-gray, 0.02em)
+    &:focus .main__search_icon
+      border: 1px solid $colors-royal-blue
+  &__btn_search
+    @include blue-btn($colors-royal-blue, 32px, -0.02em)
+    @include font-family(14px, 500, 171%, $colors-nero, -0.02em)
+    &:disabled svg
+      fill: $colors-bombay
