--- a/loyeers/header.pug
+++ b/loyeers/header.pug
@@ -9,6 +9,8 @@ header.header.container
   .header__login
     button.header__btn_post Post a Job
     button.header__btn_login Log in
+  .header__burger
+    <svg width="25" height="25" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.25 6.75H5.75a.72.72 0 0 0-.527.223A.72.72 0 0 0 5 7.5v.75a.72.72 0 0 0 .223.527A.72.72 0 0 0 5.75 9h13.5a.72.72 0 0 0 .527-.223A.72.72 0 0 0 20 8.25V7.5a.72.72 0 0 0-.223-.527.72.72 0 0 0-.527-.223Zm0 4.5H5.75a.72.72 0 0 0-.527.223A.72.72 0 0 0 5 12v.75a.72.72 0 0 0 .223.527.72.72 0 0 0 .527.223h13.5a.72.72 0 0 0 .527-.223.72.72 0 0 0 .223-.527V12a.72.72 0 0 0-.223-.527.72.72 0 0 0-.527-.223Zm0 4.5H5.75a.72.72 0 0 0-.527.223A.72.72 0 0 0 5 16.5v.75a.72.72 0 0 0 .223.527.72.72 0 0 0 .527.223h13.5a.72.72 0 0 0 .527-.223.72.72 0 0 0 .223-.527v-.75a.72.72 0 0 0-.223-.527.72.72 0 0 0-.527-.223Z" fill="#030407"/></svg>
 
 
 
