--- a/loyeers/users.pug
+++ b/loyeers/users.pug
@@ -6,8 +6,8 @@ section.users
         .users__info_desc
           h5 “Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit. Sed a mi<br>rhoncus, pharetra leo et, efficitur tortor.<br>Fusce vel convallis magna”
           p David Sinclair - Senior Frontend Developer
-        .user__info_btn
-          button.users__btn_left
-          button.users__btn_right
+        .users__info_btn
+          button.users__info_btn-left
+          button.users__info_btn-right
       .users__slider_img
         img(src="img/senior.jpg")
