--- a/style/style.sass
+++ b/style/style.sass
@@ -27,6 +27,7 @@
   padding: 24px 0
   @include font-family (14px, 500, 171%, $colors-bright-gray, -0.02em)
   &__nav
+    padding-left: 20px
     &_list
       display: flex
       gap: 12px
@@ -37,17 +38,20 @@
       color: $colors-royal-blue
   &__btn
     display: flex
-    gap: 8px
+    gap: 10px
     &_post
       @include white-btn(10px, 16px, 100px, -0.02em)
+      margin-right: 5px
     &_login
       @include blue-btn($colors-royal-blue, 20px, -0.02em)
   &__hr
     border: none
     border-top: 1px solid $colors-athens-gray
+  &__burger
+    display: none
 
 .main
-  margin-top: 65px
+  margin-top: 87px
   margin-bottom: 63px
   &__new
     display: flex
@@ -57,10 +61,11 @@
     max-width: 298px
     align-items: center
     & span
-      @include font-family (12px, 600, 12px, $colors-royal-blue, 0.08em)
+      @include font-family (12px, 600, 12px, $colors-royal-blue, 0.02em)
       background-color: $colors-nero
       padding: 4px 8px
     & p
+      padding-left: 4px
       @include font-family (12px, 500, 133%, $colors-ebony, 0)
   &__title
     display: flex
@@ -69,7 +74,7 @@
     margin-top: 23px
     & h2
       max-width: 473px
-      @include second-family (48px, 700, 120%, $colors-ebony, -0.02em)
+      @include second-family (48px, 700, 120%, $colors-ebony, 0em)
     & p
       max-width: 540px
       @include font-family (16px, 400, 200%, $colors-bright-gray, 0)
@@ -81,7 +86,7 @@
       align-items: center
       justify-content: space-between
       background-color: $colors-nero
-      outline: 1px solid $colors-athens-gray
+      outline: 1px solid $colors-athens-gray2
       transition: 0.3s
       max-width: 720px
       padding: 13px
@@ -100,6 +105,8 @@
       top: -35px
       z-index: -1
       object-fit: cover
+      &2
+          display: none
   &__input_search
     border: none
     outline: none
@@ -128,19 +135,19 @@
 
 .jo
   background-color: $colors-athens-gray
-  padding: 64px 0
+  padding: 39px 0 64px
   &__title
     display: flex
     flex-direction: column
     gap: 16.5px
     & h3
-      @include second-family(40px, 700, 120%, $colors-ebony, -0.02em)
+      @include second-family(40px, 700, 120%, $colors-ebony, -0.003em)
     &_info
       display: flex
       align-items: flex-end
       justify-content: space-between
       & p
-        @include font-family(16px, 400, 180%, $colors-bright-gray, -0.02em)
+        @include font-family(16px, 400, 180%, $colors-bright-gray, -0.015em)
       & button
         text-align: center
         @include blue-btn($colors-royal-blue, 20px, -0.02em)
@@ -178,7 +185,7 @@
       & span
         @include font-family(14px, 400, 160%, $colors-shuttle-gray, -0.02em)
     &_spec
-      @include second-family(18px, 700, 130%, $colors-ebony, 0)
+      @include second-family(18px, 700, 130%, $colors-ebony, 0.02em)
     &_tags
       display: flex
       gap: 8px
@@ -195,8 +202,13 @@
       gap: 24px
     &_location, &_money
       display: flex
-      gap: 9px
       align-items: center
+      gap: 5px
+    &_location p, &_money p
+      @include font-family(14px, 500, 120%, $colors-shuttle-gray, -0.03em)
+    &_location img
+      padding-left: 4px
+
 
 .work
   padding: 64px 0
@@ -209,7 +221,7 @@
       flex-direction: column
       gap: 8px
       & h3
-        @include second-family(40px, 700, 120%, $colors-ebony, -0.02em)
+        @include second-family(40px, 700, 120%, $colors-ebony, 0em)
       & p
         @include font-family(14px, 400, 160%, $colors-shuttle-gray, -0.02em)
     &_slide-btn
@@ -226,6 +238,7 @@
     margin-top: 58px
     display: flex
     gap: 24px
+    flex-wrap: wrap
     &_img
       border: 1px solid $colors-athens-gray
       padding: 12px
@@ -256,8 +269,9 @@
         display: inline-block
         width: fit-content
   &__person
-    margin-top: 128px
+    margin-top: 70px
     display: flex
+    flex-wrap: wrap
     align-items: center
     gap: 104px
     &_img
@@ -275,17 +289,18 @@
         padding: 15.5px
         @include font-family(14px, 400, 120%, $colors-bright-gray, 0)
     &_info
+      // padding-top: 11px
       display: flex
       flex-direction: column
       gap: 32px
       & h3
-        @include second-family(40px, 700, 120%, $colors-ebony, -0.02em)
+        @include second-family(40px, 700, 120%, $colors-ebony, 0em)
       & p
         @include font-family(16px, 400, 180%, $colors-bright-gray, -0.02em)
     &_list
       display: flex
       flex-direction: column
-      gap: 14px
+      gap: 10px
     &_item
       display: flex
       gap: 16px
@@ -305,12 +320,12 @@
   background-color: $colors-athens-gray
   padding-bottom: 64px
   & h3
-    @include second-family(40px, 700, 120%, $colors-ebony, -0.02em)
+    @include second-family(40px, 700, 120%, $colors-ebony, 0em)
     text-align: center
     margin-top: 64px
   &__slider
     display: flex
-    gap: 126px
+    gap: 145px
     margin-top: 72px
     &_img
       padding-bottom: 10px
@@ -322,18 +337,20 @@
     &_desc
       display: flex
       flex-direction: column
-      gap: 23px
+      gap: 25px
       & h5
-        @include font-family(24px, 500, 140%, $colors-bright-gray, -0.02em)
+        @include font-family(24px, 500, 140%, $colors-bright-gray, 0em)
       & p
         @include font-family(16px, 400, 180%, $colors-royal-blue, -0.02em)
-  &__btn
-    &_left
-      @include slider-btn
-      background-image: $btn-left
-    &_right
-      @include slider-btn
-      background-image: $btn-right
+    &_btn
+      display: flex
+      gap: 14px
+      &-left
+        @include slider-btn
+        background-image: $btn-left
+      &-right
+        @include slider-btn
+        background-image: $btn-right
 
 .news
   &__title
@@ -341,10 +358,10 @@
     justify-content: space-between
     margin: 64px 0 56px
     & h3
-      @include second-family(40px, 700, 120%, $colors-ebony, -0.02em)
+      @include second-family(40px, 700, 120%, $colors-ebony, -0.003em)
     &_btn
       display: flex
-      gap: 12px
+      gap: 20px
   &__btn
     &_left
       @include slider-btn
@@ -356,6 +373,7 @@
     display: flex
     gap: 24px
     justify-content: center
+    flex-wrap: wrap
     &_item
       border: 1px solid $colors-athens-gray2
       display: flex
@@ -373,6 +391,7 @@
         border: none
         background-color: $colors-athens-gray
         width: 324px
+        margin-bottom: 22px
       &-img
         max-width: 372px
       &-info
@@ -414,7 +433,7 @@
     flex-direction: column
     gap: 16px
     & h4
-      @include second-family(32px, 700, 140%, $colors-ebony, -0.02em)
+      @include second-family(32px, 700, 140%, $colors-ebony, 0em)
     & p
       @include font-family(16px, 400, 180%, $colors-bright-gray, -0.02em)
     &_logo
@@ -432,7 +451,7 @@
       position: absolute
       bottom: 0px
       left: 50%
-      transform: translate(-50%, 50%)
+      transform: translate(-50%, 58%)
       display: flex
       align-items: center
       justify-content: space-between
@@ -471,3 +490,63 @@
     @include font-family(14px, 500, 171%, $colors-nero, -0.02em)
     &:disabled svg
       fill: $colors-bombay
+
+.footer
+  margin-top: 105px
+  padding-bottom: 185px
+  &__hr
+    border-top: 1px solid $colors-athens-gray2
+  &__cont
+    display: flex
+    flex-direction: column
+    margin-top: 74px
+    gap: 46px
+    & img
+      margin: 0 auto
+      max-width: 169px
+    &_info
+      max-width: 1140px
+      display: flex
+      justify-content: space-between
+    &_pages
+      display: flex
+      flex-direction: column
+      gap: 28px
+      & p
+        @include font-family(14px, 600, 180%, $colors-manatee, 0.08em)
+        text-transform: uppercase
+    &_nav-list
+      display: flex
+      flex-direction: column
+      gap: 12px
+      & li
+        @include font-family(14px, 400, 200%, $colors-ebony, -0.02em)
+        &:hover
+          color: $colors-royal-blue
+          transition: 0.3s
+    &_sign
+      display: flex
+      flex-direction: column
+      gap: 16px
+      max-width: 450px
+      & p
+        @include font-family(14px, 600, 180%, $colors-manatee, 0.08em)
+        text-transform: uppercase
+    &_form
+      display: flex
+      gap: 16px
+      & input
+        height: 48px
+        width: 319px
+        border: 1px solid $colors-athens-gray2
+        @include font-family(15px, 400, 180%, $colors-dusty-gray, 0em)
+      & input::placeholder
+        padding-left: 19px
+        @include font-family(15px, 400, 180%, $colors-dusty-gray, 0em)
+      & button
+        width: 115px
+        padding: 12px 20px
+        @include blue-btn($colors-royal-blue, 20px, -0.02em)
+        @include font-family(14px, 500, 171%, $colors-nero, -0.02em)
+
+@import mobile
