--- a/loyeers/job-openings.pug
+++ b/loyeers/job-openings.pug
@@ -4,7 +4,7 @@ section.jo
     .jo__title
       h3 Explore the latest job openings
       .jo__title_info
-        p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a mi rhoncus,<br>pharetra  leo et, efficitur tortor. Fusce vel convallis magna.
+        p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a mi rhoncus,<br class ='dnm'>pharetra  leo et, efficitur tortor. Fusce vel convallis magna.
         button.jo__title_btn See All Jobs
     .jo__cards
       each card in cards
