--- a/loyeers/work.pug
+++ b/loyeers/work.pug
@@ -21,8 +21,9 @@ section.work.container
       img(src="img/man_its_ok.jpg")
       p Partnership with Glassdoor and LinkedIn
     .work__person_info
+      p.dn WHY CHOOSE US
       h3 Build a custom membership site with locked content.
-      p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a mi rhoncus, pharetra leo et, efficitur tortor. Fusce vel convallis magna, sit amet pulvinar diam. Sed laoreet feugiat consequat.
+      p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a mi rhoncus, pharetra leo et, efficitur tortor. Fusce vel convallis magna,<br class ='dn'>sit amet pulvinar diam. Sed laoreet feugiat consequat.
       .work__person_list
         for item in [1, 2, 3]
           .work__person_item
