--- a/index.pug
+++ b/index.pug
@@ -5,6 +5,9 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title F5 test task
     link(rel="stylesheet", href="style/style.css")
+    link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css")
+    script(src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js")
+    script(src="script.js" defer)
   body.body
     include loyeers/header.pug
     hr.header__hr
