--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,600;1,600&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import 'https://unpkg.com/swiper/swiper-bundle.min.css';
 *, *::before, *::after {
   box-sizing: border-box;
 }
@@ -503,7 +504,10 @@ body, html {
   margin-top: 58px;
   display: flex;
   gap: 24px;
-  flex-wrap: wrap;
+  display: flex;
+  overflow-x: scroll;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
 }
 .work__slider_img {
   border: 1px solid #f8f8fa;
@@ -516,12 +520,13 @@ body, html {
 .work__slider_card {
   display: flex;
   flex-direction: column;
-  gap: 24px;
   border: 1px solid #f8f8fa;
   padding: 41px;
-  max-width: 390px;
   width: 100%;
   cursor: pointer;
+  display: inline-block;
+  width: 390px;
+  margin-right: 24px;
 }
 .work__slider_card-logo {
   display: flex;
